# btc-urbit

./: README.md  shell.nix
nix/: nixcrpkgs.nix  nixpkgs-musl.nix  nixpkgs.nix  sources.json  sources.nix
nix/nixcrpkgs/macos/: default.nix
pkg/arvo/app/: chat-hook.hoon  contact-hook.hoon  invite-store.hoon  metadata-store.hoon  publish.hoon
pkg/arvo/lib/: pprint.hoon
pkg/arvo/lib/language-server/: complete.hoon
pkg/arvo/sys/: hoon.hoon  zuse.hoon
pkg/herb/: default.nix
pkg/hs/: default.nix
pkg/hs/urbit-atom/: urbit-atom.cabal
pkg/hs/urbit-atom/bench/: Main.hs
pkg/hs/urbit-atom/lib/Urbit/: Atom.hs
pkg/hs/urbit-atom/lib/Urbit/Atom/: Fast.hs  Slow.hs
pkg/hs/urbit-atom/test/: Main.hs
pkg/hs/urbit-azimuth/: urbit-azimuth.cabal
pkg/hs/urbit-azimuth/lib/Urbit/: Azimuth.hs
pkg/hs/urbit-king/: urbit-king.cabal
pkg/hs/urbit-king/lib/Data/: RAcquire.hs
pkg/hs/urbit-king/lib/Urbit/: Noun.hs  Prelude.hs  Time.hs  Timer.hs
pkg/hs/urbit-king/lib/Urbit/Arvo/: Common.hs  Effect.hs  Event.hs
pkg/hs/urbit-king/lib/Urbit/King/: .#App.hs  API.hs  App.hs  CLI.hs  Config.hs  EventBrowser.hs  Main.hs  TryJamPill.hs
pkg/hs/urbit-king/lib/Urbit/Noun/: Conversions.hs  Convert.hs  Core.hs  Cue.hs  Jam.hs  TH.hs  Tank.hs  Tree.hs
pkg/hs/urbit-king/lib/Urbit/Vere/: Ames.hs  Behn.hs  Clay.hs  Dawn.hs  Http.hs  LMDB.hs  LockFile.hs  Log.hs  NounServ.hs  Pier.hs  Serf.hs  Term.hs
pkg/hs/urbit-king/lib/Urbit/Vere/Http/: Client.hs  Server.hs
pkg/hs/urbit-king/lib/Urbit/Vere/Pier/: Types.hs
pkg/hs/urbit-king/lib/Urbit/Vere/Term/: API.hs  Demux.hs  Logic.hs  Render.hs
pkg/hs/urbit-king/test/: AmesTests.hs  ArvoTests.hs  BehnTests.hs  DawnTests.hs  DeriveNounTests.hs  HoonMapSetTests.hs  JamTests.hs  LogTests.hs  Main.hs  NounConversionTests.hs
pkg/hs/urbit-noun-core/lib/Urbit/Noun/: Convert.hs  Core.hs  TH.hs
pkg/hs/urbit-noun/lib/Urbit/Noun/: Conversions.hs  Tank.hs  Time.hs  Tree.hs
pkg/urbit/: configure
pkg/urbit/worker/: main.c
