cabal-version: 2.4
name:          urbit-atom
version:       0.10.1
synopsis:      Urbit Atom
homepage:      https://github.com/urbit/urbit
license:       MIT
license-file:  LICENSE

source-repository head
  type:     git
  location: https://github.com/urbit/urbit
  subdir:   pkg/hs/urbit-atom

common base
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    ExistentialQuantification
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StarIsType
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UnboxedTuples
    ViewPatterns
  ghc-options:
    -Weverything -Wno-missing-local-signatures
    -Wno-missing-import-lists -Wno-safe -Wno-unsafe
    -Wno-monomorphism-restriction -Wno-missed-specialisations
    -Wno-all-missed-specialisations -Werror -O2
  build-depends:
    , base >=4.12 && <5

common threaded
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import:          base
  hs-source-dirs:  lib
  build-depends:
    , bytestring
    , ghc-prim
    , integer-gmp
    , primitive
    , text
    , vector
  exposed-modules:
    Urbit.Atom
    Urbit.Atom.Fast
    Urbit.Atom.Slow

test-suite urbit-atom-tests
  import:         base, threaded
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    , bytestring
    , QuickCheck
    , text
    , urbit-atom
    , vector

benchmark urbit-atom-bench
  import:         base, threaded
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: bench
  build-depends:
    , bytestring
    , criterion
    , urbit-atom
