cabal-version: 2.4
name:          urbit-azimuth
version:       0.10.1
synopsis:      Urbit Azimuth
homepage:      https://github.com/urbit/urbit
license:       MIT
license-file:  LICENSE
data-files:    azimuth.json

source-repository head
  type:     git
  location: https://github.com/urbit/urbit
  subdir:   pkg/hs/urbit-azimuth

library
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    ExistentialQuantification
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StarIsType
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns
  ghc-options:        -Wall 
  hs-source-dirs:     lib
  build-depends:
    , base >=4.12 && <5
    , web3
  exposed-modules:
    Urbit.Azimuth
